# peg-solitaire

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  flake.nix  index.html  settings.gradle
.github/workflows/: android.yml  release.yml  rust.yml  wasm.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: dummy.cpp
app/src/main/java/de/feschber/peg_solitaire/: MainActivity.java
assets/android-res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
examples/: transpose.rs
gradle/: libs.versions.toml
peg-solitaire-android/: Cargo.toml
peg-solitaire-android/src/: lib.rs
solitaire-game/: Cargo.toml
solitaire-game/src/: 3d_scene.rs  animation.rs  board.rs  buttons.rs  fps_overlay.rs  hints.rs  input.rs  lib.rs  movement.rs  solver.rs  stats.rs  status.rs  total_progress.rs  undo.rs  window.rs
solitaire-solver/: Cargo.toml
solitaire-solver/src/: board.rs  calc_first.rs  calc_naive.rs  calc_success.rs  dag.rs  dir.rs  dominators.rs  feasible.rs  hash.rs  lib.rs  mov.rs  normalize_dedup.rs  pagoda.rs  par.rs  radix_tree.rs  solution.rs  sort.rs  timer.rs  unique_solutions.rs
solution-cache/: Cargo.toml  build.rs
solution-cache/src/: lib.rs
src/: main.rs
