[workspace]
members = ["solitaire-game", "solitaire-solver", "solution-cache"]

[package]
name = "peg-solitaire"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
solitaire-game = { path = "./solitaire-game", version = "0.0.1", optional = true }
solitaire-solver = { path = "./solitaire-solver", version = "0.0.1" }

# run build.rs in release mode, otherwise it takes 100 years
[profile.dev.build-override]
opt-level = 2
debug = false

[profile.release.build-override]
opt-level = 2

[features]
default = []
game = ["dep:solitaire-game"]
solution_cache = ["solitaire-game/solution_cache"]

[profile.release]
# lto = "thin"
strip = "symbols"
panic = "abort"
# codegen-units = 1

[profile.dev.package."*"]
opt-level = 2
