[package]
name = "solitaire-solver"
description = "A solver for Peg Solitaire"
version = "0.0.1"
edition = "2024"

[dependencies]
# ahash = "0.8.12"
# fnv = "1.0.7"
rustc-hash = "2.1.1"
nohash-hasher = "0.2.0"
rayon = "1.11.0"
# voracious_radix_sort = { version = "1.2.0", features = ["voracious_multithread"] }
voracious_radix_sort = { git = "https://github.com/feschber/voracious_sort", features = ["voracious_multithread"] }
