[package]
name = "solitaire-solver"
description = "A solver for Peg Solitaire"
version = "0.0.1"
edition = "2024"

[dependencies]
# ahash = "0.8.12"
# fnv = "1.0.7"
rustc-hash = "2.1.1"
nohash-hasher = "0.2.0"
rayon = "1.11.0"
log = "0.4.29"
rand = "0.10.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
voracious_radix_sort = { git = "https://github.com/lakwet/voracious_sort" }
getrandom = {version="0.4.2", features=["wasm_js"]}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
voracious_radix_sort = { git = "https://github.com/lakwet/voracious_sort", features = ["voracious_multithread"] }
