[package]
name = "solution-cache"
description = "A cache for the solitaire solutions"
version = "0.0.1"
edition = "2024"

[dependencies]
brotli = "8.0.1"
solitaire-solver = { path = "../solitaire-solver", version = "0.0.1" }

[build-dependencies]
brotli = "8.0.1"
solitaire-solver = { path = "../solitaire-solver", version = "0.0.1" }
